<resources>
    <string name="app_name">Banky McBank</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings for json requests -->
    <string name="USERNAME">user_id</string>
    <string name="PASSWORD">password</string>
    <string name="TOKEN">token</string>
    <string name="ACCOUNT_ID">account_id</string>
    <string name="ACCOUNTS">accounts</string>
    <string name="TRANSACTIONS">transactions</string>
    <string name="ERROR">error</string>
    <string name="MESSAGE">message</string>

    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="more">More</string>
    <string name="edit">Edit</string>
    <string name="clear">Clear</string>
    <string name="add">add</string>
    <string name="filter">Filter</string>
    <string name="loading_text">---</string>
    <string name="refresh">Refresh</string>
    <string name="message_elipses">Message...</string>

    <string name="error_title">Error</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_profile">Account Summary</string>
    <string name="title_transfers">Transfers</string>
    <string name="title_bill_payment">Bill Payment</string>
    <string name="title_settings">Settings</string>
    <string name="title_register">Register</string>
    <string name="title_activity_account_details">Account Details</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Card Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="register_account">No account yet? Create one</string>
    <string name="error_invalid_username">Invalid card number</string>
    <string name="error_invalid_username_length">Card number must be %1$d characters</string>
    <string name="error_invalid_username_contains">Card number must contain all numbers</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_password_mismatch">Passwords do not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to register -->
    <string name="username_hint">Card Number</string>
    <string name="password_hint">Password</string>
    <string name="re_password_hint">Re-enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_member">Already a member? Login</string>

    <!-- Strings related to profile -->
    <string name="balance_cad">$ %1$,.2f CAD</string>
    <string name="balance_usd">$ %1$,.2f USD</string>
    <string name="amount">$ %1$,.2f</string>
    <string name="banking_accounts">Banking</string>
    <string name="borrowing_accounts">Borrowing</string>
    <string name="investing_accounts">Investing</string>
    <string name="no_accounts">No accounts</string>
    <string name="transaction_history">Transaction History</string>

    <!-- Strings related to settings -->
    <string name="delete_account">Delete Account</string>
    <string name="settings_password_hint">Password</string>
    <string name="settings_confirm_password_hint">Confirm Password</string>
    <string name="settings_delete">Delete</string>
    <string name="delete_account_instructions">Please enter your password to delete your account</string>
    <string name="delete_account_notice">&#42;This will delete your account&#44; delete all events you are hosting and remove you from any events you have joined.</string>
    <string name="settings_delete_question">Are you sure you want to delete your profile?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
