<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/veryDarkGrey"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:orientation="vertical">

            <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/veryDarkGrey"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/medium_margin"
                    android:paddingRight="@dimen/medium_margin">

                    <LinearLayout
                        android:id="@+id/no_accounts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/large_margin"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_insert_drive_file_white_24px" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/extra_small_margin"
                            android:text="@string/no_accounts"
                            android:textColor="@color/white"
                            android:textSize="@dimen/font_size_small" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/banking_accounts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="12dp"
                        android:text="@string/banking_accounts"
                        android:textColor="#fff"
                        android:textSize="14sp" />

                    <ListView
                        android:id="@+id/banking_account_list"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:choiceMode="singleChoice"
                        android:clickable="true"
                        android:descendantFocusability="blocksDescendants"
                        android:divider="@android:color/transparent"
                        android:dividerHeight="@dimen/small_margin">

                    </ListView>

                    <TextView
                        android:id="@+id/borrowing_accounts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="12dp"
                        android:text="@string/borrowing_accounts"
                        android:textColor="#fff"
                        android:textSize="14sp" />

                    <ListView
                        android:id="@+id/borrowing_account_list"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:choiceMode="singleChoice"
                        android:clickable="true"
                        android:divider="@android:color/transparent"
                        android:dividerHeight="@dimen/small_margin">
                    </ListView>

                    <TextView
                        android:id="@+id/investing_accounts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="12dp"
                        android:text="@string/investing_accounts"
                        android:textColor="#fff"
                        android:textSize="14sp" />

                    <ListView
                        android:id="@+id/investing_account_list"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:choiceMode="singleChoice"
                        android:clickable="true"
                        android:divider="@android:color/transparent"
                        android:dividerHeight="@dimen/small_margin">
                    </ListView>

                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
